--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -26,7 +26,7 @@ body {
 /* Home Page Carousel */
 
 header.carousel {
-    height: 50%;
+    height: 700px;
 }
 
 header.carousel .item,
@@ -37,8 +37,10 @@ header.carousel .carousel-inner {
 
 header.carousel .fill {
     width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
     height: 100%;
-    background-position: center;
+    background-position: center top;
     background-size: cover;
 }
 
