--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -26,7 +26,7 @@ body {
 /* Home Page Carousel */
 
 header.carousel {
-    height: 700px;
+    height: 500px;
 }
 
 header.carousel .item,
@@ -41,7 +41,8 @@ header.carousel .fill {
 	margin: 0 auto;
     height: 100%;
     background-position: center top;
-    background-size: cover;
+    background-size: auto 100%;
+	background-repeat: no-repeat;
 }
 
 /* 404 Page Styles */
